--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="song_name">16dp</dimen>
+    <dimen name="song_time">32dp</dimen>
+    <dimen name="song_author">48dp</dimen>
+    <dimen name="song_play_button">64dp</dimen>
+    <dimen name="list_icon">64dp</dimen>
+    <dimen name="list_text_padding">16dp</dimen>
+    <dimen name="list_playbutton_size">48dp</dimen>
+    <dimen name="list_playbutton_padding">8dp</dimen>
+
+</resources>
