--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,49 +7,32 @@
 
     <ImageView
         android:id="@+id/song_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
+        style="@style/SongDescription.Image"
         tools:src="@drawable/ic_launcher_background"/>
 
     <TextView
         android:id="@+id/song_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceLarge"
+        style="@style/SongDescription.SongName"
         android:layout_above="@id/song_author"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
         tools:text="Track 1"/>
 
     <TextView
         android:id="@+id/song_author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceMedium"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="48dp"
+        style="@style/SongDescription.SongAuthor"
         tools:text="Author Name"/>
 
     <TextView
         android:id="@+id/song_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="04:44"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:layout_centerHorizontal="true"
+        style="@style/SongDescription.SongTime"
         android:layout_above="@id/song_name"
-        android:layout_marginBottom="32dp"
+        tools:text="04:44"
         />
 
     <ImageView
         android:id="@+id/song_play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_play_arrow"
+        style="@style/SongDescription.PlayButton"
         android:layout_above="@+id/song_time"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="64dp"/>
+        tools:src="@drawable/ic_play_circle_filled"
+        />
 
 </RelativeLayout>
