--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/list_element"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_element">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/track_image"
-        android:src="@drawable/ic_launcher_background"
-        style="@style/ListItems.Image"/>
+        style="@style/ListItems.Image"
+        android:src="@drawable/ic_launcher_background" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_weight="1"
         android:gravity="center_vertical"
+        android:orientation="vertical"
         android:padding="@dimen/list_text_padding">
 
         <TextView
             android:id="@+id/track"
-            tools:text="Some track name"
-            style="@style/ListItems.Text.Song"/>
+            style="@style/ListItems.Text.Song"
+            tools:text="Some track name" />
 
         <TextView
             android:id="@+id/album"
-            tools:text="Some Author"
-            style="@style/ListItems.Text"/>
+            style="@style/ListItems.Text"
+            tools:text="Some Author" />
 
         <TextView
             android:id="@+id/author"
-            tools:text="Some Author"
-            style="@style/ListItems.Text.Bold"/>
+            style="@style/ListItems.Text.Bold"
+            tools:text="Some Author" />
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/track_time"
-        tools:text="04:44"
-        style="@style/ListItems.Time"/>
+        style="@style/ListItems.Time"
+        tools:text="04:44" />
 
     <ImageView
         android:id="@+id/play_button"
-        android:src="@drawable/ic_play_arrow"
-        style="@style/ListItems.Button"/>
+        style="@style/ListItems.Button"
+        android:src="@drawable/ic_play_arrow" />
 
 </LinearLayout>
