--- a/app/src/main/res/layout/list_item_recommended.xml
+++ b/app/src/main/res/layout/list_item_recommended.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/list_element"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_element">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/recommended_track_image"
-        android:src="@drawable/ic_launcher_background"
-        style="@style/ListItems.Image"/>
+        style="@style/ListItems.Image"
+        android:src="@drawable/ic_launcher_background" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_weight="1"
         android:gravity="center_vertical"
+        android:orientation="vertical"
         android:padding="@dimen/list_text_padding">
 
         <TextView
             android:id="@+id/recommended_track"
-            tools:text="Some track name"
-            style="@style/ListItems.Text.Song"/>
+            style="@style/ListItems.Text.Song"
+            tools:text="Some track name" />
 
         <TextView
             android:id="@+id/recommended_author"
-            tools:text="Some Author"
-            style="@style/ListItems.Text.Bold"/>
+            style="@style/ListItems.Text.Bold"
+            tools:text="Some Author" />
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/recommended_track_time"
-        tools:text="04:44"
-        style="@style/ListItems.Time"/>
+        style="@style/ListItems.Time"
+        tools:text="04:44" />
 
 </LinearLayout>
